--- a/Lab2/theory.tex
+++ b/Lab2/theory.tex
@@ -1,31 +1,31 @@
 \section{Introduction}
 
-Last Monday at the laboratory we were learning how to use an oscilloscope and signal generator. We observed signal shapes, configured income signal and measure signals such as: frequency, magnitude, phase shift, period and average value.
+The goal of the laboratory was to learn how to use an oscilloscope and a signal generator. We configured the signal, observed various signal shapes and measured signal parameters such as frequency, magnitude, phase shift, period and average value.
 
 \subsection*{Theory}
 
 An oscilloscope, formerly known as an oscillograph, is an instrument that graphically displays electrical signals and shows how those signals change over time.
 
-There are two types of oscilloscopes: analog and digital. An analog oscilloscope captures and displays the voltage wave form in its original form, while a digital oscilloscope uses an analog-to-digital converter to capture and store information digitally. (When it comes to debugging and design, most engineers today use digital oscilloscopes.)
+There are two types of oscilloscopes: analog and digital. An analog oscilloscope captures and displays the voltage waveform in its original form, while a digital oscilloscope uses an analog-to-digital converter to capture and store information digitally. When it comes to debugging and designing, today most engineers use digital oscilloscopes.
 
 \subsection*{A brief history}
 
-The oscilloscope was invented by a French physicist \href{https://en.wikipedia.org/wiki/Andr%C3%A9_Blondel}{André Blondel} in 1893. His device was able to register the values of electrical quantities such as alternative current intensity. An ink pendulum attached to a coil recorded the information on a moving paper tape. The first oscilloscopes had a very small bandwidth, between 10 and 19 kHz.
+The oscilloscope was invented by a French physicist André Blondel in 1893. His device was able to register the values of electrical quantities such as alternative current intensity. An ink pendulum attached to a coil recorded the information on a moving paper tape. The first oscilloscopes had a very small bandwidth, between 10 and 19 kHz.
 
 \subsection*{How does an oscilloscope work?}
 
-To fully understand the experiments with oscilloscope we have to know how it works.
+To fully understand experiments with an oscilloscope, we have to know how it works.
 
-First of all, an oscilloscope is a combination of various small parts.But, there are four parts that are the most important among all. These are:
+First of all, an oscilloscope is a combination of various components. But, there are four that are the most important among all. These are:
 
 \begin{itemize}
 	\item CRT
 	\begin{itemize}
-		\item In an oscilloscope, the cathode ray tube is used to display a graph of the voltage or current at a given point in time. The voltage is applied to the cathode, and the ammeter measures the current. The electrons are then accelerated towards the anode, and the voltage controls the beam’s intensity. This creates a beam of electrons that scans the screen from left to right, and the beam’s intensity is proportional to the current.
+		\item The cathode ray tube is used to display a graph of the voltage or current at a given point in time. The voltage is applied to the cathode, and the ammeter measures the current. The electrons are then accelerated towards the anode, and the voltage controls the beam’s intensity. This creates a beam of electrons that scans the screen from left to right, and the beam’s intensity is proportional to the current.
 	\end{itemize}
 	\item Vertical control
 	\begin{itemize}
-		\item A vertical control in an oscilloscope adjusts the voltage displayed on the screen. The height of the waveforms determines this voltage on the screen. The higher the waveforms, the higher the voltage. The vertical control allows you to adjust the voltage to match the waveforms on the screen.
+		\item Vertical control adjusts the voltage displayed on the screen. The height of the waveforms determines this voltage on the screen. The higher the waveforms, the higher the voltage. The vertical control allows you to adjust the voltage to match the waveforms on the screen.
 	\end{itemize}
 	\item Horizontal control
 	\begin{itemize}
@@ -33,7 +33,7 @@ First of all, an oscilloscope is a combination of various small parts.But, there
 	\end{itemize}
 	\item Triggering control
 	\begin{itemize}
-		\item Triggering in an oscilloscope controls the timing of the waveform display. The waveforms are displayed in the time domain, so triggering is used to control the start and stop times of the waveforms. Triggering is also used to control the acquisition of data.
+		\item Triggering controls the timing of the waveform display. The waveforms are displayed in the time domain, so triggering is used to control the start and stop times of the waveforms. Triggering is also used to control the acquisition of data.
 	\end{itemize}
 \end{itemize}
 
