--- a/Lab2/theory.tex
+++ b/Lab2/theory.tex
@@ -40,16 +40,16 @@ First of all, an oscilloscope is a combination of various small parts.But, there
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=12cm]{images/img.png}
-	\caption{?}
+	\caption{Scaled signal in time and amplitude}
 	\label{fig:dunno}
 \end{figure}
 
-Digital oscilloscopes work by sampling voltage at a fixed rate and displaying the voltage waveforms on a digital screen. The voltage waveforms are displayed as a series of dots representing the voltage amplitude at a specific point in time. The oscilloscope samples the voltage waveforms at a fixed rate and calculates the average voltage between the samples. This process is repeated for every sample, and the resulting waveform is displayed on the oscilloscope’s screen.
+Digital oscilloscopes work by sampling voltage at a fixed rate and displaying the voltage waveforms on a digital screen. The voltage waveforms are displayed as a series of dots representing the voltage amplitude at a specific point in time. The oscilloscope samples the voltage waveforms at a fixed rate and calculates the average voltage between the samples. This process is repeated for every sample, and the resulting waveform is displayed on the oscilloscope’s screen. So This is ....
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=12cm]{images/img_1.png}
-	\caption{?}
+	\caption{Schematic example}
 	\label{fig:dunno-vol-2}
 \end{figure}
 
