--- a/Lab2/theory.tex
+++ b/Lab2/theory.tex
@@ -44,7 +44,10 @@ First of all, an oscilloscope is a combination of various components. But, there
 	\label{fig:dunno}
 \end{figure}
 
-Digital oscilloscopes work by sampling voltage at a fixed rate and displaying the voltage waveforms on a digital screen. The voltage waveforms are displayed as a series of dots representing the voltage amplitude at a specific point in time. The oscilloscope samples the voltage waveforms at a fixed rate and calculates the average voltage between the samples. This process is repeated for every sample, and the resulting waveform is displayed on the oscilloscope’s screen. So This is ....
+\subsubsection*{Digital Oscilloscope}
+A digital oscilloscope can be used to analyze the function of either analog or digital circuits and systems. A typical oscilloscope consists of a cathode ray tube (CRT) with an electron gun, a phosphor-coated screen, and a high voltage power supply. The CRT usually displays time on the x-axis as well as amplitude on the y-axis. Digital oscilloscopes are gaining popularity because they provide more accuracy than their counterparts and many models offer features such as triggering, storage, multiple channels for simultaneous display, math functions such as integration and differentiation, persistence mode for viewing changes in signal over long periods without refreshing the screen every few seconds like most CR.
+
+Digital oscilloscopes work by sampling voltage at a fixed rate and displaying the voltage waveforms on a digital screen. The voltage waveforms are displayed as a series of dots representing the voltage amplitude at a specific point in time. The oscilloscope samples the voltage waveforms at a fixed rate and calculates the average voltage between the samples. This process is repeated for every sample, and the resulting waveform is displayed on the oscilloscope’s screen.
 
 \begin{figure}[H]
 	\centering
