--- a/Lab2/conclusion.tex
+++ b/Lab2/conclusion.tex
@@ -1,2 +1,22 @@
-\section{Conclusion}
+\section{Conclusions}
+
+\subsection{Measurement methods}
+
+
+All methods returned similar results. The direct method proved to be the least precise, which shouldn’t come as a surprise as it involves the most amount of human work.
+
+\subsection{Triggering}
+
+Most combinations proved to be unstable, and the non-triggering wave appeared to be moving. This was a result of the trigger happening at the wrong time - we could only see a part of the wave that was getting re-drawn at certain intervals.
+
+
+The combination $f_{1}=\SI{1}{\kilo\hertz}$, $f_{2} = \SI{4}{\kilo\hertz}$, Trigger source = CH1 was stable because:
+\begin{itemize}
+	\item the first period was a multiplication of the second, so the drawing was always triggered at the beginning of each wave;
+	\item the triggering wave had a bigger period, so by the time the trigger was released, the second wave was done getting drawn.
+\end{itemize}
+
+\subsection{Oscilloscope functions}
+
+The Averaging Acquisition Mode is useful when we want to see the underlaying wave. It’s worth noting, however, that this mode will remove any random noise, hence it should not be used when accurate reading is necessary.
 
