--- a/Lab2/theory.tex
+++ b/Lab2/theory.tex
@@ -1,12 +1,12 @@
 \section{Introduction}
 
-The goal of the laboratory was to learn how to use an oscilloscope and a signal generator. We configured the signal, observed various signal shapes and measured signal parameters such as frequency, magnitude, phase shift, period and average value.
+The goal of the laboratory was to learn how to use an oscilloscope and a signal generator. We configured the signal, observed various signal shapes and measured signal parameters such as frequency, magnitude, phase shift, period, and average value.
 
 \subsection*{Theory}
 
 An oscilloscope, formerly known as an oscillograph, is an instrument that graphically displays electrical signals and shows how those signals change over time.
 
-There are two types of oscilloscopes: analog and digital. An analog oscilloscope captures and displays the voltage waveform in its original form, while a digital oscilloscope uses an analog-to-digital converter to capture and store information digitally. When it comes to debugging and designing, today most engineers use digital oscilloscopes.
+There are two types of oscilloscopes: analog and digital. An analog oscilloscope captures and displays the voltage waveform in its original form, while a digital oscilloscope uses an analog-to-digital converter to capture and store information digitally. Nowadays most engineers use digital oscilloscopes for designing and debugging digital circuits.
 
 \subsection*{A brief history}
 
