--- a/Lab2/experiment.tex
+++ b/Lab2/experiment.tex
@@ -3,35 +3,35 @@
 
 \subsection{Measurement methods}
 
-First, we explored different ways of obtaining the parameters' values. We set the signal generator to $f = \SI{864}{\hertz}$, $U_{pp} = \SI{2.6}{\volt}$ and connected it to the oscilloscope using Channel 1.
+First, we explored different ways of obtaining the parameters' values. We configured the signal generator to $f = \SI{864}{\hertz}$, $V_{pp} = \SI{2.6}{\volt}$ and connected it to the first oscilloscope channel.
 
 \subsubsection*{Direct}
 
- To obtain parameters' values using the direct method, one must read the peak-to-peak distance from the oscilloscope's display and multiply it by the setting of the vertical sensitivity knob.
+ To obtain parameters' values using the direct method, one must read the peak-to-peak distance from the oscilloscope's display and multiply it by the setting of the sensitivity knob. The picture may be shifted with knobs to facilitate reading.
 
 The vertical sensitivity knob was set to \SI{0.5}{\volt}. Table~\ref{tab:direct-method} shows the parameters' values.
 
 \begin{table}[H]
 	\centering
 	\begin{tabular}{c|c|c|c|c|c|c}
-		$Y$ & $C_{y} [\unit{\volt}]$ & $f [\unit{\hertz}]$ & $U_{pp} [\unit{\volt}]$ & $U_{m} [\unit{\volt}]$ & $U_{0} [\unit{\volt}]$ & $T [\unit{\micro\second}]$\\
+		$Y [div]$ & $C_{y} [\unit{\volt}]$ & $f [\unit{\hertz}]$ & $V_{pp} [\unit{\volt}]$ & $V_{m} [\unit{\volt}]$ & $V_{0} [\unit{\volt}]$ & $T [\unit{\micro\second}]$\\
 		\hline
 		5.1 & 0.5 & 864 & 2.55 & 1.275 & 0.3 & 1157
 	\end{tabular}
-	\caption{Direct method ($Y$ -- peak-to-peak distance, $C_{y}$ -- sensitivity, $f$ -- frequency, $U_{pp}$ -- peak-to-peak value, $U_{m}$ -- magnitude, $U_{0}$ -- average (DC) value, $T$ -- period)}
+	\caption{Direct method ($Y$ -- peak-to-peak distance, $C_{y}$ -- sensitivity, $f$ -- frequency, $V_{pp}$ -- peak-to-peak voltage, $V_{m}$ -- magnitude, $V_{0}$ -- average (DC) voltage, $T$ -- period)}
 	\label{tab:direct-method}
 \end{table}
 
-$U_{pp}$, $U_{m}$ and $T$ calculations are shown in Equations~\ref{eq:peak-to-peak},~\ref{eq:magnitude},~\ref{eq:frequency}.
+$V_{pp}$, $V_{m}$ and $T$ calculations are shown in Equations~\ref{eq:peak-to-peak},~\ref{eq:magnitude},~\ref{eq:frequency}.
 
 
 \begin{equation}
-	U_{pp} = Y\cdot C_{y} = 5.1\cdot \SI{0.5}{\volt} = \SI{2.55}{\volt}
+	V_{pp} = Y\cdot C_{y} = 5.1\cdot \SI{0.5}{\volt} = \SI{2.55}{\volt}
 	\label{eq:peak-to-peak}
 \end{equation}
 
 \begin{equation}
-	U_{m} = \frac{U_{pp}}{2} = \frac{\SI{2.55}{\volt}}{2} = \SI{1.275}{\volt}
+	V_{m} = \frac{V_{pp}}{2} = \frac{\SI{2.55}{\volt}}{2} = \SI{1.275}{\volt}
 	\label{eq:magnitude}
 \end{equation}
 
@@ -42,25 +42,25 @@ $U_{pp}$, $U_{m}$ and $T$ calculations are shown in Equations~\ref{eq:peak-to-pe
 
 \subsubsection*{Cursors}
 
-In the cursors method the picture is first shifted on the display to facilitate reading. The remaining steps are the same as in the direct method.
+In the cursors method, the measurement is performed indirectly via two pairs of horizontal and vertical cursors. The distance between a pair of cursors is displayed on the screen. Therefore, e.g. signal peak-to-peak voltage may be measured by aligning horizontal cursors with its opposite peaks.
 
-The cursors were positioned at \SI{1.64}{\volt} and \SI{0.96}{\volt}. Table~\ref{tab:cursors-method} shows the parameters' values. The peak-to-peak value should have been calculated manually but because its value was always shown on the display, we forgot to do it and read it directly from the display.
+The cursors were positioned at \SI{1.64}{\volt} and \SI{-0.96}{\volt}. Table~\ref{tab:cursors-method} shows the parameters' values.
 
 \begin{table}[H]
 	\centering
 	\begin{tabular}{c|c|c|c|c|c|c}
-		$A [\unit\volt]$ & $B [\unit\volt]$ & $f [\unit{\hertz}]$ & $U_{pp} [\unit{\volt}]$ & $U_{m} [\unit{\volt}]$ & $U_{0} [\unit{\volt}]$ & $T [\unit{\micro\second}]$\\
+		$V_{a} [\unit\volt]$ & $V_{b} [\unit\volt]$ & $f [\unit{\hertz}]$ & $V_{pp} [\unit{\volt}]$ & $V_{m} [\unit{\volt}]$ & $V_{0} [\unit{\volt}]$ & $T [\unit{\micro\second}]$\\
 		\hline
-		1.64 & 0.96 & 864 & 2.6 & 1.3 & 0.3 & 1157
+		1.64 & -0.96 & 864 & 2.6 & 1.3 & 0.3 & 1157
 	\end{tabular}
-	\caption{Direct method ($A$ -- 1st cursor, $B$ -- 2nd cursor, $f$ -- frequency, $U_{pp}$ -- peak-to-peak value, $U_{m}$ -- magnitude, $U_{0}$ -- average (DC) value, $T$ -- period)}
+	\caption{Direct method ($V_{b}$ -- 1st cursor, $V_{b}$ -- 2nd cursor, $f$ -- frequency, $V_{pp}$ -- peak-to-peak voltage, $V_{m}$ -- magnitude, $V_{0}$ -- average (DC) voltage, $T$ -- period)}
 	\label{tab:cursors-method}
 \end{table}
 
-$U_{m}$ and $T$ calculations are shown in Equations~\ref{eq:magnitude2},~\ref{eq:frequency2}.
+$V_{m}$ and $T$ calculations are shown in Equations~\ref{eq:magnitude2},~\ref{eq:frequency2}.
 
 \begin{equation}
-	U_{m} = \frac{U_{pp}}{2} = \frac{\SI{2.6}{\volt}}{2} = \SI{1.3}{\volt}
+	V_{m} = \frac{V_{pp}}{2} = \frac{\SI{2.6}{\volt}}{2} = \SI{1.3}{\volt}
 	\label{eq:magnitude2}
 \end{equation}
 
@@ -79,46 +79,46 @@ Table~\ref{tab:measure-method} shows the parameters' values.
 \begin{table}[H]
 	\centering
 	\begin{tabular}{c|c|c|c|c}
-		$f [\unit{\hertz}]$ & $U_{pp} [\unit{\volt}]$ & $U_{m} [\unit{\volt}]$ & $U_{0} [\unit{\volt}]$ & $T [\unit{\micro\second}]$\\
+		$f [\unit{\hertz}]$ & $V_{pp} [\unit{\volt}]$ & $V_{m} [\unit{\volt}]$ & $V_{0} [\unit{\volt}]$ & $T [\unit{\micro\second}]$\\
 		\hline
 		864 & 2.6 & 1.3 & 0.3 & 1157
 	\end{tabular}
-	\caption{Direct method ($f$ -- frequency, $U_{pp}$ -- peak-to-peak value, $U_{m}$ -- magnitude, $U_{0}$ -- average (DC) value, $T$ -- period)}
+	\caption{Direct method ($f$ -- frequency, $V_{pp}$ -- peak-to-peak voltage, $V_{m}$ -- magnitude, $V_{0}$ -- average (DC) voltage, $T$ -- period)}
 	\label{tab:measure-method}
 \end{table}   
 
-$U_{m}$ and $T$ calculations are shown in Equations~\ref{eq:magnitude2},~\ref{eq:frequency2}.
+$V_{m}$ and $T$ calculations are shown in Equations~\ref{eq:magnitude3},~\ref{eq:frequency3}.
 
 \begin{equation}
-	U_{m} = \frac{U_{pp}}{2} = \frac{\SI{2.6}{\volt}}{2} = \SI{1.3}{\volt}
-	\label{eq:magnitude2}
+	V_{m} = \frac{V_{pp}}{2} = \frac{\SI{2.6}{\volt}}{2} = \SI{1.3}{\volt}
+	\label{eq:magnitude3}
 \end{equation}
 
 \begin{equation}
 	T = \frac{1}{f} = \frac{1}{\SI{864}{\hertz}} = \SI{0.001157407407}{\second} = \SI{1157}{\micro\second}
-	\label{eq:frequency2}
+	\label{eq:frequency3}
 \end{equation}
 
 \subsection{Triggering}
 
-In this part of the experiment we observed what happens to signals when different trigger sources are used. We generated two signals and connected them to Channels 1 and 2.
+In this part of the experiment we observed what happens to displayed signals when different trigger sources are used. We generated two signals and connected them to Channels 1 and 2.
 
 \begin{itemize}
 	\item CH1
 	\begin{itemize}
 		\item $V_{0} = \SI{0}{\volt}$
 		\item $V_{pp} = \SI{2.3}{\volt}$
-		\item $f = \SI{864}{\hert}$ or $f = \SI{1}{\kilo\hert}$
+		\item $f = \SI{864}{\hertz}$ or $f = \SI{1}{\kilo\hertz}$
 	\end{itemize}
 	\item CH2
 	\begin{itemize}
 		\item $V_{0} = \SI{0}{\volt}$
 		\item $V_{pp} = \SI{2}{\volt}$
-		\item $f = \SI{4}{\kilo\hert}$
+		\item $f = \SI{4}{\kilo\hertz}$
 	\end{itemize}
 \end{itemize}
 
-Next, different frequency and trigger combinations were tried. Table~\ref{tab:triggering} shows all collected data.
+Next, different frequency and trigger combinations were tried. Table~\ref{tab:triggering} shows the collected data.
 
 \begin{table}[H]
 	\centering
@@ -131,7 +131,7 @@ Next, different frequency and trigger combinations were tried. Table~\ref{tab:tr
 		\hline
 		1 & 4 & CH2 & Unstable\\
 		\hline
-		0.864 & 4 & CH2 & nstable\\
+		0.864 & 4 & CH2 & Unstable\\
 	\end{tabular}
 	\caption{Frequency and trigger combinations}
 	\label{tab:triggering}
