--- a/Lab2/theory.tex
+++ b/Lab2/theory.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-The goal of the laboratory was to learn how to use an oscilloscope and a signal generator. We configured the signal, observed various signal shapes and measured signal parameters such as frequency, magnitude, phase shift, period, and average value.
+The goal of the laboratory was to learn how to use an oscilloscope and a signal generator. We configured the signal, observed various signal shapes, and measured signal parameters such as frequency, magnitude, phase shift, period, and average value.
 
 \subsection*{Theory}
 
@@ -10,13 +10,15 @@ There are two types of oscilloscopes: analog and digital. An analog oscilloscope
 
 \subsection*{A brief history}
 
-The oscilloscope was invented by a French physicist André Blondel in 1893. His device was able to register the values of electrical quantities such as alternative current intensity. An ink pendulum attached to a coil recorded the information on a moving paper tape. The first oscilloscopes had a very small bandwidth, between 10 and 19 kHz.
+The oscilloscope was invented by a French physicist André Blondel in 1893. His device was able to register the values of electrical quantities such as alternating current intensity. An ink pendulum attached to a coil recorded the information on a moving paper tape. 
+
+The first oscilloscopes had a very small bandwidth, between 10 and 19 kHz.
 
 \subsection*{How does an oscilloscope work?}
 
 To fully understand experiments with an oscilloscope, we have to know how it works.
 
-First of all, an oscilloscope is a combination of various components. But, there are four that are the most important among all. These are:
+An oscilloscope is a combination of various components, among which we can pinpoint four that are the most important. These are:
 
 \begin{itemize}
 	\item CRT
@@ -45,14 +47,14 @@ First of all, an oscilloscope is a combination of various components. But, there
 \end{figure}
 
 \subsubsection*{Digital Oscilloscope}
-A digital oscilloscope can be used to analyze the function of either analog or digital circuits and systems. A typical oscilloscope consists of a cathode ray tube (CRT) with an electron gun, a phosphor-coated screen, and a high voltage power supply. The CRT usually displays time on the x-axis as well as amplitude on the y-axis. Digital oscilloscopes are gaining popularity because they provide more accuracy than their counterparts and many models offer features such as triggering, storage, multiple channels for simultaneous display, math functions such as integration and differentiation, persistence mode for viewing changes in signal over long periods without refreshing the screen every few seconds like most CR.
+A digital oscilloscope can be used to analyze the function of either analog or digital circuits and systems. A typical oscilloscope consists of a cathode ray tube (CRT) with an electron gun, a phosphor-coated screen, and a high voltage power supply. The CRT usually displays time on the x-axis and amplitude on the y-axis. Digital oscilloscopes are gaining popularity because they provide more accuracy than their counterparts, and many models offer features such as triggering, storage, multiple channels for simultaneous display, math functions such as integration and differentiation, persistence mode for viewing changes in signal over long periods without refreshing the screen every few seconds like most CR.
 
 Digital oscilloscopes work by sampling voltage at a fixed rate and displaying the voltage waveforms on a digital screen. The voltage waveforms are displayed as a series of dots representing the voltage amplitude at a specific point in time. The oscilloscope samples the voltage waveforms at a fixed rate and calculates the average voltage between the samples. This process is repeated for every sample, and the resulting waveform is displayed on the oscilloscope’s screen.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=12cm]{images/img_1.png}
-	\caption{Schematic example}
+	\caption{Analog oscilloscope schematic}
 	\label{fig:dunno-vol-2}
 \end{figure}
 
