--- a/Lab2/experiment.tex
+++ b/Lab2/experiment.tex
@@ -1,58 +1,49 @@
 \section{Experiment}
 \subsection{Setup}
 
-In the last lab we used the SDG1025 Generator and "SDS1052DL+" oscilloscope
+During the laboratory we used the SDG1025 signal generator and a "SDS1052DL+" oscilloscope.
 \subsubsection*{Detailed explanation of how we used it}
-SDG1025 Generator
+SDG1025 signal generator
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=12cm]{images/11.png}
-	\caption{Schematic example}
+	\includegraphics[width=10cm]{images/11.png}
+	\caption{SDG1025}
 	\label{fig:wow1}
 \end{figure}
 
-User manual:
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=12cm]{images/12.png}
-	\caption{Schematic example}
-	\label{fig:wow2}
+	\includegraphics[width=10cm]{images/15.png}
+	\caption{SDG1025 interface}
+	\label{fig:wow5}
 \end{figure}
 
-- To Set a Waveform we used buttons with waveform icon that which are on \textbf{"waveform keys"} panel.
-- With "Sine" button waveform window will display sine waveform.
-- By setting frequency/period, amplitude/high level,
-offset/low level, sine signal with different parameters can be generated.
-- To set freq and another parameters we used \textbf{Number keys}, all parameters displayed in "\textbf{Parameter Area}"
-- We used two buttons on the right side of the
+\begin{itemize}
+	\item To set a waveform we used buttons with a waveform icon that are on \textbf{"waveform keys"} panel.
+	\item With "Sine" button waveform window will display sine waveform.
+	\item By setting frequency/period, amplitude/high level, offset/low level, sine signal with different parameters can be generated.
+	\item To set freq and another parameters we used \textbf{Number keys}, all parameters displayed in "\textbf{Parameter Area}"
+	\item We used two buttons on the right side of the
    operation panel, which are used to activate or deactivate the output signal.
-- There are three sets of buttons on the operation
+	\item There are three sets of buttons on the operation
   panel, which are direction button, the knob and the keypad.
-  All of them we used for:
-1. The up and down keys were used to shift parameters and the left and right
+	\item The up and down keys were used to shift parameters and the left and right
      keys were used to shift digits.
-2. Keypad was used to directly set the parameters value.
-3. Knob was used to change a signal digit value whose range is 0~9
+	\item Keypad was used to directly set the parameters value.
+	\item Knob was used to change a signal digit value whose range is 0~9
+\end{itemize}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=12cm]{images/13.png}
-	\caption{Schematic example}
+	\includegraphics[width=10cm]{images/13.png}
 	\label{fig:wow3}
 \end{figure}
 
-Set Sine Signals
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=12cm]{images/14.png}
-	\caption{Schematic example}
+	\includegraphics[width=10cm]{images/14.png}
+	\caption{Setting sign signals}
 	\label{fig:wow4}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=12cm]{images/15.png}
-	\caption{Schematic example}
-	\label{fig:wow5}
 \end{figure}
 
  - To Set the Output Frequency/Period we used "\textbf{Sine}" and "\textbf{Freq}" buttons.
@@ -65,62 +56,62 @@ Set Sine Signals
 \subsubsection*{"SDS1052DL+" oscilloscope}
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=12cm]{images/16.png}
+	\includegraphics[width=10cm]{images/16.png}
 	\caption{Schematic example}
 	\label{fig:wow6}
 \end{figure}
 
 \subsubsection*{Menu and Control Button}
-- It would be better to start from channel buttons. We used them to turn that channel ON or OFF
-  and open the channel menu for that channel. Also we can use the channel menu to
+\begin{itemize}
+	\item It would be better to start from channel buttons. We used them to turn that channel ON or OFF and open the channel menu for that channel. Also we can use the channel menu to
   set up a channel. When the channel is on, the channel button is lit.
-- RUN/STOP: Continuously acquires waveforms or stops the acquisition.
-- SET TO 50%: We used it to stabilize a waveform quickly. The oscilloscope can
-  set the trigger level to be halfway between the minimum and maximum
+	\item RUN/STOP: Continuously acquires waveforms or stops the acquisition.
+	\item SET TO 50\unit{\percent}: We used it to stabilize a waveform quickly. The oscilloscope can set the trigger level to be halfway between the minimum and maximum
   voltage level automatically.
-- MATH: It used to display the Math menu. We can use the "\textbf{MATH}" menu to use the
+	\item MATH: It used to display the Math menu. We can use the "\textbf{MATH}" menu to use the
   oscilloscopes Math functions.
-- "HORI MENU": We used it to display the Horizontal menu. We can use the Horizontal
+	\item "HORI MENU": We used it to display the Horizontal menu. We can use the Horizontal
   menu to display the waveform and zoom in a segment of a waveform.
-- MEASURE: Used to display a menu of measurement parameters.
-- AUTO: Very useful button. Automatically sets the oscilloscope controls to produce a usable display
+	\item MEASURE: Used to display a menu of measurement parameters.
+	\item AUTO: Very useful button. Automatically sets the oscilloscope controls to produce a usable display
   of the input signals.
-- SINGLE: Acquire a single waveform and then stops.
-- Channel Connector (CH1, CH2): Input connectors for waveforms display.
-- The horizontal position control establishes the time between the trigger position
+	\item SINGLE: Acquire a single waveform and then stops.
+	\item Channel Connector (CH1, CH2): Input connectors for waveforms display.
+	\item The horizontal position control establishes the time between the trigger position
   and the screen center. We can adjust the horizontal “POSITION” knob control to
   view waveform data before the trigger, after the trigger, or some of each. When
   we change the horizontal position of a waveform, we are changing the time
   between the trigger and the center of the display actually
+\end{itemize}
+
 \subsubsection*{Universal Knob}
-Deserves a separate group
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=12cm]{images/17.png}
-	\caption{Schematic example}
+	\includegraphics[width=10cm]{images/17.png}
+	\caption{Universal knob}
 	\label{fig:wow7}
 \end{figure}
 
-- Very useful knob. We used the Universal knob with many functions, such as adjusting the
+This is a very useful knob. We used the Universal knob with many functions, such as adjusting the
   holdoff time, moving cursors, setting the pulse width, adjusting the upper and lower frequency limit, adjust X and Y masks when
   using the pass/fail function etc. We can also turn the “Universal” knob to
   adjust the storage position of setups, waveforms, pictures when
   saving/recalling and to select menu options.
+
 \subsubsection*{Vertical System}
 We used vertical control for displaying waveform, rectify scale and
 position.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=12cm]{images/18.png}
-	\caption{Schematic example}
+	\includegraphics[width=10cm]{images/18.png}
 	\label{fig:wow8}
 \end{figure}
 
 
 \subsubsection*{Horizontal System}
-As follow Picture, there are one button and two knobs in the HORIZONTAL area.
+As shown on the picture below, there are one button and two knobs in the HORIZONTAL area.
 We used the horizontal controls to change the horizontal scale and position of
 waveforms. The horizontal position readout shows the time represented by the
 center of the screen, using the time of the trigger as zero. Changing the horizontal
@@ -128,23 +119,9 @@ scale causes the waveform to expand or contract around the screen center.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=12cm]{images/18.png}
-	\caption{Schematic example}
+	\includegraphics[width=10cm]{images/18.png}
 	\label{fig:wow9}
 \end{figure}
-
-
-\subsubsection*{Acquiring Signals System}
-On the lab we used it last.
-When we acquire a signal, the oscilloscope converts it into a digital form and
-displays a waveform. The acquisition mode defines how the signal is digitized and
-the time base setting affects the time span and level of detail in the acquisition.
-- Sampling: In this acquisition mode, the oscilloscope samples the signal in
-evenly spaced intervals to construct the waveform. This mode accurately
-represents signals most of the time.
-- Advantage: We can use this mode to reduce random noise.
-  Disadvantage: This mode does not acquire rapid variations in the signal that may occur between samples. This can result in aliasing may cause narrow pulses to be
-  missed.
 
 \subsection{Measurement methods}
 
