1st experiment tables and equations: digital

--- a/Lab3/main.tex
+++ b/Lab3/main.tex
@@ -4,6 +4,7 @@
 \usepackage{hyperref}
 \usepackage{indentfirst}
 \usepackage{siunitx}
+\usepackage{amsmath}
 \usepackage{float}
 \usepackage{graphicx}
 
