--- a/Lab3/main.tex
+++ b/Lab3/main.tex
@@ -7,19 +7,7 @@
 \usepackage{amsmath}
 \usepackage{float}
 \usepackage{graphicx}
-
-% \usepackage{listings}
-% \usepackage{longtable}
-% \usepackage{caption}
-% \usepackage{multirow}
-% \usepackage{xcolor}
-% \usepackage{bbding}
-% \usepackage{titlesec}
-% \usepackage{multirow}
-% \usepackage{amsmath}
-% \usepackage{mathtools}
-% \usepackage{listings}
-% \newcommand{\sectionbreak}{\clearpage}
+\usepackage{multirow}
 
 \title{DC VOLTAGE MEASUREMENT}
 \date{2022-12-12}
