--- a/Lab3/experiment.tex
+++ b/Lab3/experiment.tex
@@ -2,21 +2,25 @@
 
 \subsection{Output voltage of a voltage source}
 
+The first experiment featured measurements of the output voltage of a voltage source. The meter was connected to the voltage source in parallel, as shown in Figure~\ref{fig:voltage_schematic}, and measurements were taken for different resistance values.
+
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=5cm]{schematics/analog_voltage.pdf}
-	\caption{Voltage measurement schematic}
-	\label{fig:voltage_schematics}
+	\includegraphics[width=6cm]{schematics/analog_voltage.pdf}
+	\caption{Voltage measurements schematic}
+	\label{fig:voltage_schematic}
 \end{figure}
 
-\subsubsection*{Analog measurement}
+\subsubsection*{Analog measurements}
 
-For analogue measurements we used an LM-3 meter, characterized by an accuracy class of 0.5 and an internal resistance of \SI{1}{\frac{\kilo\ohm}{\volt}}.
+The voltmeter that we used for analog measurements is characterized by a 0.5 accuracy class and a  \SI{1}{\frac{\kilo\ohm}{\volt}} internal resistance.
+ 
+ The measurements along with the results are split into Tables~\ref{tab:analog_volt_1} and~\ref{tab:analog_volt_2}; Tab.~\ref{tab:analog_volt_1} contains the measurement results with only the limiting error applied, whereas Tab.~\ref{tab:analog_volt_2} shows the final results which include the systematic error.
 
 \begin{table}[H]
 	\centering
 	\begin{tabular}{ c | c | c | c | c | c | c | c}
-		$R_c [\unit{\ohm}]$ & $\alpha$ & $\alpha_{max}$  & $V_r [\unit{\volt}]$ & $V [\unit{\volt}]$ & $\Delta V [\unit{\volt}]$ & $\delta V  \unit{\percent}$ & $V \pm \Delta V [\unit{\volt}]$\\
+		$R_c [\unit{\ohm}]$ & $\alpha$ & $\alpha_{max}$  & $V_r [\unit{\volt}]$ & $V [\unit{\volt}]$ & $\Delta V [\unit{\volt}]$ & $\delta V  [\unit{\percent}]$ & $V \pm \Delta V [\unit{\volt}]$\\
 		\hline
 		0 & 40 & 75 & 7.5 & 4.0 & 0.037500 & 0.937500 & $4.00 \pm 0.04$\\
 		\hline
@@ -30,7 +34,7 @@ For analogue measurements we used an LM-3 meter, characterized by an accuracy cl
 		\hline
 		10000 & 30 & 75 & 0.15 & 0.06 & 0.000750 & 1.250000 & $0.0600 \pm 0.0008$
 	\end{tabular}
-	\caption{Analog voltage measurement for $E \sim \SI{3.9}{\volt}$ ($R_c$ -- circuit resistance, $\alpha$ -- actual needle swing, $\alpha_{max}$ -- maximal swing, $V_r$ -- range, $V$ -- calculated voltage, $\Delta V$ -- absolute error, $\delta V$ -- relative error)}
+	\caption{Analog voltage measurements for $E \sim \SI{3.9}{\volt}$ ($R_c$ -- circuit resistance, $\alpha$ -- actual needle swing, $\alpha_{max}$ -- maximal swing, $V_r$ -- range, $V$ -- measured voltage, $\Delta V$ -- absolute error, $\delta V$ -- relative error)}
 	\label{tab:analog_volt_1}
 \end{table}
 
@@ -51,11 +55,11 @@ For analogue measurements we used an LM-3 meter, characterized by an accuracy cl
 		\hline
 		150 & -4 & -0.985222 & 4 & 4.06 & $4.0600 \pm 0.0008$
 	\end{tabular}
-	\caption{Analog voltage measurement for $E \sim \SI{3.9}{\volt}$ ($R_v$ -- internal voltmeter resistance, $\Delta_m V$ -- systematic error, $\delta_m V$ -- ?, $c$ -- correction factor, $V_c$ -- ?}
+	\caption{Analog voltage measurements for $E \sim \SI{3.9}{\volt}$ ($R_v$ -- internal voltmeter resistance, $\Delta_m V$ -- systematic error, $\delta_m V$ -- ?, $c$ -- correction factor, $V_c$ -- calculated voltage)}
 	\label{tab:analog_volt_2}
 \end{table}
 
-Example calculations for $R_c = \SI{100}{\ohm} $ are shown in Equations~\ref{eq:analog_V},~\ref{eq:analog_Delta_V},~\ref{eq:analog_delta_V},~\ref{eq:analog_R_v},~\ref{eq:analog_Delta_m},~\ref{eq:analog_delta_m},~\ref{eq:analog_c},~\ref{eq:analog_V_c}.
+Example calculations for $R_c = \SI{100}{\ohm} $ are shown in the equations below. %Equations~\ref{eq:analog_V},~\ref{eq:analog_Delta_V},~\ref{eq:analog_delta_V},~\ref{eq:analog_R_v},~\ref{eq:analog_Delta_m},~\ref{eq:analog_delta_m},~\ref{eq:analog_c},~\ref{eq:analog_V_c}.
 
 \begin{equation}
 	 V = \frac{\alpha\cdot V_{r}}{\alpha_{max}} = \frac{39.5\cdot \SI{7.5}{\volt}}{75} = \SI{3.95}{\volt}
@@ -73,7 +77,7 @@ Example calculations for $R_c = \SI{100}{\ohm} $ are shown in Equations~\ref{eq:
 \end{equation}
 
 \begin{equation}
-	R_v = V_r\cdot \SI{1}{\frac{\kilo\ohm}{\volt}} = \SI{7.5}{\volt}\cdot \SI{1000}{\frac{\ohm}{\volt}} = \SI{7500}{\ohm}
+	R_v = V_r\cdot x = \SI{7.5}{\volt}\cdot \SI{1000}{\frac{\ohm}{\volt}} = \SI{7500}{\ohm}
 	\label{eq:analog_R_v}
 \end{equation}
 
@@ -98,26 +102,30 @@ Example calculations for $R_c = \SI{100}{\ohm} $ are shown in Equations~\ref{eq:
 \end{equation}
 
 
-\subsubsection*{Digital measurement}
+\subsubsection*{Digital measurements}
+
+Digital measurements were made using a multimeter. Its internal resistance and accuracy are available in the device manual; for our calculations we chose the least precise accuracy value that is guaranteed to work for one year after device calibration.
+
+ The measurements along with the results are split into Tables~\ref{tab:digital_voltage_1} and~\ref{tab:digital_voltage_2}; Tab.~\ref{tab:digital_voltage_1} contains the measurement results with only the limiting error applied, whereas Tab.~\ref{tab:digital_voltage_2} shows the final results which include the systematic error.
 
 \begin{table}[H]
 	\centering
 	\begin{tabular}{ c | c |  c | c | c | c | c}
 		$R_c [\unit{\ohm}]$  & Accuracy & $V_r [\unit{\volt}]$ & $V [\unit{\volt}]$ & $\Delta V [\unit{\volt}]$ & $\delta V [\unit{\percent}]$ & $V \pm \Delta V [\unit{\volt}]$ \\
 		\hline
-		0  & $0.0035 \pm 0.0005$ & 10 & 3.9996 & 0.000190 & 0.004750 & 3.9996 +- 0.0002\\
+		0  & $0.0035 + 0.0005$ & 10 & 3.9996 & 0.000190 & 0.004750 & $3.9996 \pm 0.0002$\\
 		\hline
-		10  & $0.0035 \pm 0.0005$  & 10 & 3.99953 & 0.000190 & 0.004750 & 3.9995 +- 0.0002\\
+		10  & $0.0035 + 0.0005$  & 10 & 3.99953 & 0.000190 & 0.004750 & $3.9995 \pm 0.0002$\\
 		\hline
-		100  & $0.0035 \pm 0.0005$  & 10 & 3.99964 & 0.000190 & 0.004750 & 3.9996 +- 0.0002\\
+		100  & $0.0035 + 0.0005$  & 10 & 3.99964 & 0.000190 & 0.004750 & $3.9996 \pm 0.0002$\\
 		\hline
-		1000 &$0.0035 \pm 0.0005$  & 10 & 3.99931 & 0.000190 & 0.004750 & 3.9993 +- 0.0002\\
+		1000 &$0.0035 + 0.0005$  & 10 & 3.99931 & 0.000190 & 0.004750 & $3.9993 \pm 0.0002$\\
 		\hline
-		5000  & $0.0035 \pm 0.0005$  & 10 & 3.99791 & 0.000190 & 0.004752 & 3.9979 +- 0.0002\\
+		5000  & $0.0035 + 0.0005$  & 10 & 3.99791 & 0.000190 & 0.004752 & $3.9979 \pm 0.0002$\\
 		\hline
-		10000 & $0.0035 \pm 0.0005$  & 10 & 3.99593 & 0.000190 & 0.004751 & 3.9959 +- 0.0002\\
+		10000 & $0.0035 + 0.0005$  & 10 & 3.99593 & 0.000190 & 0.004751 & $3.9959 \pm 0.0002$\\
 	\end{tabular}
-	\caption{Digital voltage measurement for $E \sim \SI{3.9}{\volt}$ ($R_c$ -- circuit resistance, Accuracy: $\pm$ (a$\unit{\percent}$ of reading + b$\unit{\percent}$ of range), $V_r$ -- range, $V$ -- measured voltage, $\Delta V$ -- absolute error, $\delta V$ -- relative error)}
+	\caption{Digital voltage measurements for $E \sim \SI{3.9}{\volt}$ ($R_c$ -- circuit resistance, Accuracy: $\pm$ (a$\unit{\percent}$ of reading + b$\unit{\percent}$ of range), $V_r$ -- range, $V$ -- measured voltage, $\Delta V$ -- absolute error, $\delta V$ -- relative error)}
 	\label{tab:digital_voltage_1}
 \end{table}
 
@@ -126,23 +134,23 @@ Example calculations for $R_c = \SI{100}{\ohm} $ are shown in Equations~\ref{eq:
 	\begin{tabular}{  c | c | c | c | c | c}
 		 $R_v [\unit{\mega\ohm}]$ & $\Delta_m V [\unit{\volt}]$ & $\delta_m V$ & $c [\unit{\volt}]$ & $V_c [\unit{\volt}]$ & $V_c \pm \Delta V [\unit{\volt}]$\\
 		\hline
-		10 & 0 & 0 & 0 & 3.9996 & 3.9996 +- 0.0002\\
+		10 & 0 & 0 & 0 & 3.9996 & $3.9996 \pm 0.0002$\\
 		\hline
-		10 & -0.000003 & -0.000001 & 0.000004 & 3.999534 & 3.9995 +- 0.0002\\
+		10 & -0.000003 & -0.000001 & 0.000004 & 3.999534 & $3.9995 \pm 0.0002$\\
 		\hline
-		10 & -0.000040 & -0.000010 & 0.000040 & 3.999680 & 3.9997 +- 0.0002\\
+		10 & -0.000040 & -0.000010 & 0.000040 & 3.999680 & $3.9997 \pm 0.0002$\\
 		\hline
-		10 & -0.000400 & -0.000100 & 0.000400 & 3.999710 & 3.9997 +- 0.0002\\
+		10 & -0.000400 & -0.000100 & 0.000400 & 3.999710 & $3.9997 \pm 0.0002$\\
 		\hline
-		10 & -0.001999 & -0.000500 & 0.001999 & 3.999909 & 3.9999 +- 0.0002\\
+		10 & -0.001999 & -0.000500 & 0.001999 & 3.999909 &$ 3.9999 \pm 0.0002$\\
 		\hline
-		10 & -0.003996 & -0.000999& 0.0039969 & 3.999926 & 3.9999 +- 0.0002\\
+		10 & -0.003996 & -0.000999& 0.0039969 & 3.999926 & $3.9999 \pm 0.0002$\\
 	\end{tabular}
-	\caption{Digital voltage measurement for $E \sim \SI{3.9}{\volt}$ ($R_v$ -- internal voltmeter resistance, $\Delta_m V$ -- systematic error, $\delta_m V$ -- ?, $c$ -- correction factor, $V_c$ -- ?}
+	\caption{Digital voltage measurements for $E \sim \SI{3.9}{\volt}$ ($R_v$ -- internal multimeter resistance, $\Delta_m V$ -- systematic error, $\delta_m V$ -- ?, $c$ -- correction factor, $V_c$ -- calculated voltage)}
 	\label{tab:digital_voltage_2}
 \end{table}
 
-Example calculations for $R_c = \SI{5000}{\ohm}$ are shown in Equations~\ref{eq:digital_Delta_V},~\ref{eq:digital_delta_V},~\ref{eq:digital_Delta_m},~\ref{eq:digital_delta_m},~\ref{eq:digital_c},~\ref{eq:digital_V_c}.
+Example calculations for $R_c = \SI{5000}{\ohm}$ are shown in the equations below. %Equations~\ref{eq:digital_Delta_V},~\ref{eq:digital_delta_V},~\ref{eq:digital_Delta_m},~\ref{eq:digital_delta_m},~\ref{eq:digital_c},~\ref{eq:digital_V_c}.
 
 \begin{equation}
 	\begin{split}
@@ -179,3 +187,75 @@ Example calculations for $R_c = \SI{5000}{\ohm}$ are shown in Equations~\ref{eq:
 
 
 \subsection{Voltage divider}
+
+In the second experiment we measured and compared the input and output voltages of a voltage divider. Meters were connected to the circuit in parallel (Figure~\ref{fig:voltage_divider_schematic}).
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=12cm]{schematics/voltage_divider.pdf}
+	\caption{Voltage measurements schematic}
+	\label{fig:voltage_divider_schematic}
+\end{figure}
+
+For each measurement one of the voltages was measured with an analog voltmeter and the other one with a digital multimeter. Measurements were taken for different voltage divider ratio and resistance values.
+
+Table~\ref{tab:voltage_divider} shows all of the measurements along with the results. Precision wasn't the primary focus of this experiment, hence all values have been rounded to one decimal place.
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{|c c  c  c  c  c  c  c c  c  c|}
+		\hline
+		\multicolumn{5}{|c}{\multirow{2}{*}{}} & \multirow{2}{*}{Analog} & \multirow{2}{*}{Digital} & \multicolumn{4}{c|}{ \multirow{2}{*}{ }}\\
+		&&&&&&&&&&\\
+		\hline
+		$k$ &	$R [\unit{\ohm}]$ & 	$\alpha$ & $\alpha_{max}$ &	$V_r [\unit{\volt}]$ & $V_{in} [\unit{\volt}]$ &	$V_{out} [\unit{\volt}]$ & $R_{in}$ [\unit{\ohm}]& $R_{out}$ [\unit{\ohm}]&  $	\frac{V_{out}}{V_{in}}$ & $\Delta_k$\\
+		\hline
+		0.9	& 1k	& 40 & 75 &	7.5	& 4	& 3.6 &	7.5k &	10M&	0.9	& 0\\
+		\hline
+		0.5	& 1k	& 40 &	75	& 7.5 &	4 &	2	& 7.5k	& 10M	& 0.5	& 0\\
+		\hline
+		0.1	& 1k &	40 & 75	& 7.5	& 4 &	0.4&	7.5k &	10M&	0.1 &	0\\
+		\hline
+		0.9 &	1M &	40 &	75	& 7.5 &	4	& 3.6	& 7.5k&	10M	& 0.9 &	0\\
+		\hline
+		0.5	& 1M	& 40	& 75 &	7.5 &	4	& 1.9	& 7.5k &	10M &	0.5	& 0\\
+		\hline
+		0.1	& 1M	& 40	& 75	& 7.5 &4	&0.4 &	7.5k &	10M	& 0.1 &	0\\
+		\hline
+		\multicolumn{5}{|c}{\multirow{2}{*}{}} & \multirow{2}{*}{Digital} & \multirow{2}{*}{Analog} & \multicolumn{4}{c|}{ \multirow{2}{*}{ }}\\
+		&&&&&&&&&&\\
+		\hline
+		0.9	& 1k & 36 &	75 &	7.5 &	4 & 3.6 &	10M & 	7.5k & 0.9	& 0\\
+		\hline
+		0.5	& 1k &	44 & 75 & 3	& 4	& 1.8	& 10M &	3k & 0.4 & 0.1\\
+		\hline
+		0.1	& 1k & 35.5 & 75 & 0.75 & 4 &	0.4 & 	10M &	0.75k &	0.1	& 0\\
+		\hline
+		0.9	& 1M &	3	& 75	& 0.15	& 4 &	0 &	10M &	0.15k &	0 &	0.9\\
+		\hline
+		0.5	& 1M & 0.5	& 75	& 0.15 &	4 &	0 &	10M &	0.15k &	0&	0.5\\
+		\hline
+		0.1 &	1M &	0	& 75 &	0.15 &	4 &	0 &	10M &	0.15k &	0 &	0.1\\
+		\hline
+	\end{tabular}
+	\caption{Voltage measurements for $E\sim\SI{4}{\volt}$ ($k$ -- set divider ratio, $R$ --  equivalent divider resistance, $\alpha$ -- actual needle swing, $\alpha_{max}$ -- maximal swing, $V_r$ -- range, $V_{in}$ -- input voltage, $V_{out}$ -- output voltage, $R_{in}$, $R_{out}$ -- internal meter resistances, $\frac{V_{out}}{V_{in}}$ -- measured divider ratio, $\Delta_k$ -- ratio error)}
+	\label{tab:voltage_divider}
+\end{table}
+
+Example calculation for $k = 0.9$, $R = \SI{1}{\kilo\ohm}$, $V_{in}$ measured with an analog meter, and $V_{out}$ measured with a digital meter are shown in the equations below.
+
+\begin{equation}
+	V_{in} = \frac{\alpha\cdot V_r}{\alpha_{max}} = \frac{40\cdot\SI{7.5}{\volt}}{75} = \SI{4}{\volt}	
+\end{equation}
+
+\begin{equation}
+	R_{in} = V_r\cdot x = \SI{7.5}{\volt}\cdot \SI{1}{\frac{\kilo\ohm}{\volt}} = \SI{7.5}{\kilo\ohm}
+\end{equation}
+
+\begin{equation}
+	\frac{V_{out}}{V_{in}} = \frac{\SI{3.6}{\volt}}{\SI{4}{\volt}} = 0.9
+\end{equation}
+
+\begin{equation}
+	\Delta_k = | k - \frac{V_{out}}{V_{in}}| = |0.9 - 0.9| = 0
+\end{equation}
