--- a/Lab3/experiment.tex
+++ b/Lab3/experiment.tex
@@ -55,7 +55,7 @@ The voltmeter that we used for analog measurements is characterized by a 0.5 acc
 		\hline
 		150 & -4 & -0.985222 & 4 & 4.06 & $4.0600 \pm 0.0008$
 	\end{tabular}
-	\caption{Analog voltage measurements for $E \sim \SI{3.9}{\volt}$ ($R_v$ -- internal voltmeter resistance, $\Delta_m V$ -- systematic error, $\delta_m V$ -- ?, $c$ -- correction factor, $V_c$ -- calculated voltage)}
+	\caption{Analog voltage measurements for $E \sim \SI{3.9}{\volt}$ ($R_v$ -- internal voltmeter resistance, $\Delta_m V$ -- systematic error, $\delta_m V$ -- relative error, $c$ -- correction factor, $V_c$ -- calculated voltage)}
 	\label{tab:analog_volt_2}
 \end{table}
 
@@ -146,7 +146,8 @@ Digital measurements were made using a multimeter. Its internal resistance and a
 		\hline
 		10 & -0.003996 & -0.000999& 0.0039969 & 3.999926 & $3.9999 \pm 0.0002$\\
 	\end{tabular}
-	\caption{Digital voltage measurements for $E \sim \SI{3.9}{\volt}$ ($R_v$ -- internal multimeter resistance, $\Delta_m V$ -- systematic error, $\delta_m V$ -- ?, $c$ -- correction factor, $V_c$ -- calculated voltage)}
+	\caption{Digital voltage measurements for $E \sim \SI{3.9}{\volt}$ ($R_v$ -- internal multimeter resistance, $\Delta_m V$ -- systematic error, $\delta_m V$ -- relative error
+		, $c$ -- correction factor, $V_c$ -- calculated voltage)}
 	\label{tab:digital_voltage_2}
 \end{table}
 
