--- a/Lab4/main.tex
+++ b/Lab4/main.tex
@@ -9,13 +9,13 @@
 \usepackage{graphicx}
 \usepackage{multirow}
 
-\title{DC VOLTAGE MEASUREMENT}
-\date{2022-12-17}
+\title{DC CURRENT MEASUREMENT}
+\date{2022-12-19}
 \studenta{Paulina Nowak 251002}
 \studentb{Ivan Melnyk 275510}
 \studentc{Stanislav Kustov 275512}
 \reportgroup{1}
-\reportclassdate{2022-12-05}
+\reportclassdate{2022-12-12}
 \reportlabassistant{mgr inż. Krzysztof Adamczyk}
 
 \makeatletter
