--- a/Lab4/theory.tex
+++ b/Lab4/theory.tex
@@ -2,62 +2,28 @@
 
 \subsection{Theory}
 
-This laboratory's theme was DC voltage measurement. We took measurements using analog and digital meters, calculated measurement errors and investigated their sources.
+Electric current can be measured in two ways: directly and indirectly. To make a direct measurement, the meter must be connected to the circuit in series. An ideal meter should have a zero internal resistance as not to impact the current flowing through; in reality, meters will always have a non-zero resistance creating a voltage drop.
 
-The primary source of the measurement error is the inaccuracy of a meter, but there are additional factors influencing its value. An ideal voltmeter should have an infinite internal resistance as not to let any current flow through; in reality, this device will always have a finite resistance and impact the tested circuit. Such type of an error is called a systematic/method error, and its value should be included in the measurement error.
-
-The systematic error of voltage measurements $\Delta_m V$ can be calculated using formulas shown in Eq.~\ref{eq:Delta_m},~\ref{eq:delta_m} (where: $V$ -- measured voltage, $R_c$ -- circuit resistance, $R_v$ -- internal voltmeter resistance). Then, the systematic error is used to calculate the correction factor $c$ (Eq.~\ref{eq:c}), which is later added to the measured voltage $V$ to obtain its final value $V_c$ (Eq.~\ref{eq:V_c}).
+The systematic error of current measurements $\Delta_m I$ can be calculated using formulas shown in Eq.~\ref{eq:DeltamI},~\ref{eq:deltamI} (for: $I_A$ -- measured current, $R_A$ -- internal ammeter resistance, $R_C$ -- circuit resistance). 
 
 \begin{equation}
-	\Delta_m V = -V\cdot\frac{R_c}{R_v}
-	\label{eq:Delta_m}
+	\Delta_m I = -I_A \cdot\frac{R_A}{R_C}	
+	\label{eq:DeltamI}
 \end{equation}
 
 \begin{equation}
-	\delta_m V = -\frac{R_c}{R_c + R_v}
-	\label{eq:delta_m}
+	\delta_m I = -\frac{R_A}{R_A + R_C}
+	\label{eq:deltamI}
 \end{equation}
 
-\begin{equation}
-	c = -\Delta_m V
-	\label{eq:c}
-\end{equation}
-
-\begin{equation}
-	V_c = V + c
-	\label{eq:V_c}
-\end{equation}
-
-The final measurement result should be written as $\mathbf{V_c \pm \Delta V}$, where $\Delta V$ is the limiting error (covering the inaccuracy of a meter).
-
-\subsection{Experiment equipment}
+\subsection{Equipment}
 
 The following devices were used during the laboratory:
+
 \begin{itemize}
-	\item analog voltmeter: LM-3;
-	\item digital multimeter: Agilent 34401A;
-	\item decade resistor: DR4b-16;
 	\item power supply: DF1730SB3A;
-	\item voltage divider: product name unknown.
+	\item analog ammeter: LM-3;
+	\item digital meter: Agilent 34401A;
+	\item decade resistor: DR4b-16;
+	\item resistance standard: product name unknown.
 \end{itemize}
-
-%In the second experiment we are using two voltmeters power supply and voltage divider. We learned how how voltage dividers work and how load on output changes output voltage. We will consider 4 different configurations: 2 with internal resistance of 1 k Ohm and two with 1 M Ohm using different k coefficients. 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
