--- a/Lab4/conclusion.tex
+++ b/Lab4/conclusion.tex
@@ -1,1 +1,5 @@
-\section{Conclusions}
+\section{Conclusion}
+
+During this laboratory we practiced measuring DC current and learned how the internal resistance of a meter affects the circuit. To be thorough, we tried both direct and indirect methods of measurements.
+
+Both experiments showed us that the internal meter resistance can introduce measurement errors. When the meter’s internal resistance was lower than the circuit’s, the device was functioning properly and the systematic error had very small values. However, when the circuit's resistance dropped below the meter's, the results became unreliable and lay far outside the expected set of values, sometimes even with the systematic error added. This was caused by the meter losing its primary function and blocking the current from flowing through. Thus, when high precision is desired, measurements should taken on circuits with a much higher resistance than that of the meter.
