--- a/Lab4/theory.tex
+++ b/Lab4/theory.tex
@@ -2,7 +2,7 @@
 
 \subsection{Theory}
 
-Electric current can be measured in two ways: directly and indirectly. To make a direct measurement, the meter must be connected to the circuit in series. An ideal meter should have a zero internal resistance as not to impact the current flowing through; in reality, meters will always have a non-zero resistance creating a voltage drop.
+Electric current can be measured in two ways: directly or indirectly. To make a direct measurement, the meter must be connected to the circuit in series. An ideal meter should have a zero internal resistance as not to impact the current flowing through; in reality, meters will always have a non-zero resistance creating a voltage drop.
 
 The systematic error of current measurements $\Delta_m I$ can be calculated using formulas shown in Eq.~\ref{eq:DeltamI},~\ref{eq:deltamI} (for: $I_A$ -- measured current, $R_A$ -- internal ammeter resistance, $R_C$ -- circuit resistance). 
 
